# rempack

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  CMakePresets.json  Dockerfile  HACKING.md  README.md  TEMPLATE.md  docker_build_script.sh  docker_run_app.sh  docs.md  icons_embed.h  main.cpp  rm-toolchain.cmake  rm2fb-runner.sh  rmkit  run_app.sh  run_remote.sh  setup_debugger.sh  stupid_build_script.sh
assets/icons/: LICENSE  convert.sh  icons_embed.h
assets/icons/header/: arrow-down-tag_embed.h  arrow-down_embed.h  arrow-left_embed.h  arrow-right_embed.h  arrow-up_embed.h  battery-charging_embed.h  battery-empty_embed.h  battery-full_embed.h  battery-slash_embed.h  battery-warning_embed.h  battery25_embed.h  battery50_embed.h  battery75_embed.h  bitbucket_embed.h  bookmark-solid_embed.h  bookmark_embed.h  check_embed.h  cloud-bookmark_embed.h  cloud-check_embed.h  cloud-desync_embed.h  cloud-download_embed.h  cloud-square-solid_embed.h  cloud-square_embed.h  cloud-sync_embed.h  cloud-upload_embed.h  cloud-xmark_embed.h  download-square-solid_embed.h  download-square_embed.h  download_embed.h  fast-arrow-down_embed.h  fast-arrow-left_embed.h  fast-arrow-right_embed.h  fast-arrow-up_embed.h  filter-alt_embed.h  filter-list_embed.h  filter-solid_embed.h  filter_embed.h  floppy-disk-arrow-in_embed.h  floppy-disk-arrow-out_embed.h  github_embed.h  (+47 more)
include/: semver.h  utils.h
include/algorithm/: LICENSE  boyer_moore.h
opkg/: opkg.cpp  opkg.h
src/: main.cpp  rempack.cpp  rempack.h  rempack_widgets.h  utils.h  widget_helpers.cpp  widget_helpers.h
ui/: debug_widgets.h  keyboard.h  list_box.h  overlay.h  rempack_widgets.h  text_helpers.h  utils.h  widgets.h
ui/input/: keyboard.h
ui/overlay/: overlay.h
ui/widgets/: buttons.h  graphic_utils.h  widgets.cpp  widgets.h
ui/widgets/list_box/: list_box.cpp  list_box.h
